[gd_scene load_steps=6 format=3 uid="uid://pv3mpwrce0vs"]

[ext_resource type="Texture2D" uid="uid://j7h3rx30o7hw" path="res://Assets/UI/DottedLine9Patch.png" id="1_rah86"]
[ext_resource type="Script" path="res://Abilities/AbilityDowse.gd" id="2_62y2s"]
[ext_resource type="Texture2D" uid="uid://bf8u1ylxd2r7w" path="res://Assets/UI/DowsingRodDownscaled.png" id="3_bncy2"]
[ext_resource type="Theme" uid="uid://b6iv3a38m6uhb" path="res://UI.tres" id="4_nc5oo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pepr0"]
texture = ExtResource("1_rah86")
texture_margin_left = 14.0
texture_margin_top = 17.0
texture_margin_right = 18.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Dowse" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxTexture_pepr0")
script = ExtResource("2_62y2s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_bncy2")

[node name="Uses" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("4_nc5oo")
text = "0"
horizontal_alignment = 2
vertical_alignment = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
